// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test child in space 1`] = `
"<div class=\\"var-space var--box var-space--inline\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin: -2px 0px;\\">
  <div style=\\"margin: 2px 4px 2px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 2px 4px 2px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 2px 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test child in space 2`] = `
"<div class=\\"var-space var--box var-space--inline\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin: -5px 0px;\\">
  <div style=\\"margin: 5px 20px 5px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 5px 20px 5px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 5px 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test child in space 3`] = `
"<div class=\\"var-space var--box var-space--inline\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 10px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 10px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test child in space 4`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 10px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 10px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space example 1`] = `
"<div class=\\"app-type\\">基本用法</div>
<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 12px 4px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button1</div>
    </button></div>
  <div style=\\"margin: 4px 12px 4px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button2</div>
    </button></div>
  <div style=\\"margin: 4px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button3</div>
    </button></div>
</div>
<div class=\\"app-type\\">垂直</div>
<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 12px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button1</div>
    </button></div>
  <div style=\\"margin: 0px 0px 12px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button2</div>
    </button></div>
  <div style=\\"margin: 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button3</div>
    </button></div>
</div>
<div class=\\"app-type\\">间隙</div>
<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin: -10px 0px;\\">
  <div style=\\"margin: 10px 20px 10px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button1</div>
    </button></div>
  <div style=\\"margin: 10px 20px 10px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button2</div>
    </button></div>
  <div style=\\"margin: 10px 20px 10px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button3</div>
    </button></div>
  <div style=\\"margin: 10px 20px 10px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button4</div>
    </button></div>
  <div style=\\"margin: 10px 20px 10px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button5</div>
    </button></div>
  <div style=\\"margin: 10px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button6</div>
    </button></div>
</div>
<div class=\\"app-type\\">靠右</div>
<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: end; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 12px 4px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button1</div>
    </button></div>
  <div style=\\"margin: 4px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button2</div>
    </button></div>
</div>
<div class=\\"app-type\\">环绕</div>
<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: space-around; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 6px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button1</div>
    </button></div>
  <div style=\\"margin: 4px 6px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button2</div>
    </button></div>
</div>
<div class=\\"app-type\\">居中</div>
<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: center; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 12px 4px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button1</div>
    </button></div>
  <div style=\\"margin: 4px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button2</div>
    </button></div>
</div>
<div class=\\"app-type\\">两端对齐</div>
<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: space-between; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 6px 4px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button1</div>
    </button></div>
  <div style=\\"margin: 4px 0px 4px 6px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button2</div>
    </button></div>
</div>"
`;

exports[`test space props 1`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 12px 4px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 4px 12px 4px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 4px 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 2`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 8px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 8px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 3`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 4px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 4px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 4`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 6px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 6px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 5`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 8px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 8px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 6`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 12px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 12px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 7`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 10px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 10px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 8`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 10px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 10px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 9`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 10`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 11`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: nowrap;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 12`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: nowrap;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 13`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: end; flex-wrap: nowrap;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 14`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: center; flex-wrap: nowrap;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 15`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-between; flex-wrap: nowrap;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 16`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 17`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; align-items: start;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 18`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; align-items: center;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 19`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; align-items: end;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 20`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; align-items: stretch;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 21`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; align-items: baseline;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 22`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; align-items: initial;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 23`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; align-items: inherit;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 24`] = `
"<div class=\\"var-space var--box var-space--inline\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; align-items: inherit;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space props 25`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; align-items: inherit;\\">
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 0px 0px 0px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space v-for 1`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 12px 4px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 4px 12px 4px 0px;\\">
    <div>div2</div>
  </div>
  <div style=\\"margin: 4px 0px;\\">
    <div>div3</div>
  </div>
</div>"
`;

exports[`test space with Comment 1`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin: -4px 0px;\\">
  <div style=\\"margin: 4px 12px 4px 0px;\\">
    <div>div1</div>
  </div>
  <div style=\\"margin: 4px 0px;\\">
    <div>div2</div>
  </div>
</div>"
`;
